Bug 134749 - GPS Sync: altitude shown is wrong
Summary: GPS Sync: altitude shown is wrong
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-Generic-GeolocationEdit (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-09-27 16:02 UTC by Fabien
Modified: 2018-03-23 21:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabien 2006-09-27 16:02:12 UTC
Version:           svn (using KDE KDE 3.5.2)
Installed from:    Ubuntu Packages
OS:                Linux

The first time I correlate photo with a gpx file inside GPS Sync, altitude is correctly taken from gpx file.
Altitude is also correct in Metadata/GPS.
But, when I go back to GPS Sync to edit again the values, altitude is wrong (0 or other values if gps tags were put by another tool - eg. gpsPhoto.pl) while latitude/longitude are correct.

Note (wish) : it would be great in Metadata/GPS to have real values (eg 1739.64m) instead of fractions (4349107/2500).

BTW: congratulations Gilles for this new plugin !
Comment 1 caulier.gilles 2006-09-27 16:18:35 UTC
Angelo : already done in bugzilla (:=))

Gilles
Comment 2 caulier.gilles 2006-09-27 16:46:05 UTC
SVN commit 589065 by cgilles:

kipi-plugins from trunk : fix GPS altitude value extraction.

BUG: 134749

 M  +2 -2      exiv2iface.cpp  


--- trunk/extragear/libs/kipi-plugins/common/exiv2iface/exiv2iface.cpp #589064:589065
@@ -768,8 +768,8 @@
         if (altRef.isEmpty()) return false;
         QString alt = getExifTagString("Exif.GPSInfo.GPSAltitude");
         if (alt.isEmpty()) return false;
-        num       = rational.section("/", 0, 0);
-        den       = rational.section("/", 1, 1);
+        num       = alt.section("/", 0, 0);
+        den       = alt.section("/", 1, 1);
         altitude  = num.toDouble()/den.toDouble();
         
         if (altRef == "1") altitude *= -1.0;
Comment 3 Fabien 2006-09-28 14:20:37 UTC
Thanks !