kipi-plugins from trunk : fix GPS altitude value extraction.

BUG: 134749

svn path=/trunk/extragear/libs/kipi-plugins/; revision=589065